tests/paczka1/small_fuzzy/26643021.err
Error in line 7: JW9O9ztR S658 50,0
Error in line 9: JW9O9ztR S267 65,9
